--- a/notebook/mongoDB_demo.ipynb
+++ b/notebook/mongoDB_demo.ipynb
@@ -12183,14 +12183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e4b417fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME = \"DS-Proj1\"\n",
     "COLLECTION_NAME = \"DS-Proj1-Data\"\n",
-    "CONNECTION_URL = \"mongodb+srv://datascientistinme:tka6wb9lkV1ByqoI@cluster0.m3qojpn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "CONNECTION_URL =  \"mongodb+srv://<username>:<db_password>@cluster0.m3qojpn.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
     "# Attention: Either remove your credentials or delete the mongoDB resource bofore pushing it to github."
    ]
   },
